[package]
authors = ["Ben Ruijl <benruyl@gmail.com>"]
edition = "2021"
name = "ltd"
version = "0.1.0"

[profile.dev]
opt-level = 2

[profile.release]
codegen-units = 1
lto = "thin"

[features]
higher_loops = []
python_api = ["pyo3", "havana/python_bindings", "lorentz_vector/pyo3_support"]
use_f128 = []
use_mpi = ["mpi"]

[lib]
crate-type = ["cdylib", "lib"]
name = "ltd"

[dependencies.pyo3]
features = ["extension-module"]
optional = true
version = "0.15"

[dependencies]
arrayvec = "0.5"
bincode = "1.3"
clap = "2.34"
color-eyre = {version = "^0.3", default-features = false}
colored = "1.8"
cuba = "^0.2.3"
dlopen = "0.1"
hyperdual = {git = "https://gitlab.com/benruijl/hyperdual"}
ecos-rs = "0.1"
eyre = "^0.4"
f128 = {git = "https://github.com/benruijl/f128"}
fnv = "1.0.6"
havana = {git = "https://github.com/benruijl/havana", features = ["gridplotting", "use_serde"]}
itertools = "0.8"
libc = "0.2"
lorentz_vector = {git = "https://github.com/benruijl/lorentz_vector", branch="hyperdual", features = ["serde_support", "hyperdual_support", "f128_support"]}
mpi = {git = "https://github.com/rsmpi/rsmpi", optional = true}
nalgebra = "0.29"
num = "0.3"
num-traits = "0.2"
rand = "0.8"
rayon = "1.5"
scs-rs = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "*"
termion = "1.5"
thousands = "0.2.0"
tui = "^0.9"
smallvec = "1.7"
tabled = "0.7"