[package]
name = "deformation"
version = "0.1.0"
authors = ["Ben Ruijl <benruyl@gmail.com>"]

[lib]
name = "deformation"
crate-type = ["cdylib", "lib"]

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython"
version = "0.2"
default-features = false
features = ["python27-sys"]

[dependencies]
vector = { path = "../vector" }
num = "0.2"
arrayvec = "0.4.7"
dual_num = {git = "https://github.com/benruijl/dual_num", branch = "dual9" }