[package]
name = "integrand"
version = "0.1.0"
authors = ["Ben Ruijl <benruyl@gmail.com>"]

[lib]
name = "integrand"
crate-type = ["cdylib", "lib"]

[dependencies.cpython]
version = "0.4.1"
default-features = false
features = ["python27-sys"]

[dependencies]
vector = { path = "../vector" }
num = "0.2"
