[package]
name = "integrator"
version = "0.1.0"
authors = ["Ben Ruijl <benruyl@gmail.com>"]

[lib]
name = "integrator"
crate-type = ["cdylib", "lib"]

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython"
version = "0.2"
default-features = false
features = ["python27-sys"]

[dependencies]
vector = { path = "../vector" }
deformation = { path = "../deformation" }
integrand = { path = "../integrand" }
num = "0.2"
rand = "0.5"
cuba = "^0.1.3"
clap = "2.32"