[package]
name = "ltd"
version = "0.1.0"
authors = ["Ben Ruijl <benruyl@gmail.com>"]

[lib]
name = "ltd"
crate-type = ["cdylib", "lib"]

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython"
version = "0.2"
default-features = false
features = ["python27-sys"]

[dependencies]
vector = { path = "../vector" }
num = "0.2"
arrayvec = "0.4.7"
dual_num = {git = "https://github.com/benruijl/dual_num", branch = "dualn" }
cuba = "^0.1.9"
nalgebra = "*"
num-traits = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"
itertools = "0.8"
clap = "*"
rand = "*"
f128 = { git = "https://github.com/benruijl/f128" }
