[package]
name = "ltd"
version = "0.1.0"
authors = ["Ben Ruijl <benruyl@gmail.com>"]

[features]
# uncomment this line to use f128
#default = ["use_f128"]
#default = ["use_mpi"]
#default = ["python_api", "higher_loops"]
#default = ["mg_numerator"]
#default = ["python_api"]
python_api = []
higher_loops = []
use_f128 = []
use_mpi = ["mpi"]
mg_numerator = ["dlopen", "dlopen_derive"]

[lib]
name = "ltd"
crate-type = ["cdylib", "lib"]

[dependencies.cpython]
version = "0.4.1"
default-features = false
features = ["python3-sys"]

[dependencies]
vector = { path = "../vector" }
num = "0.2"
arrayvec = "^0.5"
dual_num = {git = "https://github.com/benruijl/dual_num", branch = "dualn" }
cuba = "^0.2"
nalgebra = "*"
num-traits = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"
itertools = "0.8"
clap = "*"
rand = "*"
f128 = { git = "https://github.com/benruijl/f128" }
colored = "1.8"
mpi = { git = "https://github.com/bsteinb/rsmpi", optional = true }
fnv = "1.0.6"
scs-rs = "*"
ecos-rs = "*"
rayon = "*"
tui = "*"
termion = "*"
libc = "*"
thousands = "0.2.0"
eyre = "^0.4"
color-eyre = { version = "^0.3", default-features = false }
dlopen = { version = "*", optional = true }
dlopen_derive = { version = "*", optional = true }